<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OnlineShopApp</string>
    <string name="home">HOME</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_basket">Basket</string>
    <string name="navigation_messages">Messages</string>
    <string name="navigation_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="messages">MESSAGES</string>
    <string name="basket">BASKET</string>
    <string name="favorites">FAVORITES</string>
    <string name="sign_in_text_title">Sign in</string>
    <string name="first_name_hint_text">First name</string>
    <string name="last_name_hint_text">Last name</string>
    <string name="email_hint_text">Email</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="log_in_aux_text">Log in</string>
    <string name="sign_in_with_google_text">Sign in with Google</string>
    <string name="sign_in_with_apple_text">Sign in with Apple</string>
    <string name="welcome_back_text_title">Welcome back</string>
    <string name="password_hint_text">Password</string>
    <string name="login">Login</string>
    <string name="category">category</string>
    <string name="goods_name">goods_name</string>
    <string name="latest_title">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash sale</string>
    <string name="trade_by_bata_title">Trade by bata</string>
    <string name="location">Location</string>
    <string name="query_hint">What are you looking for ?</string>
    <string name="brands">Brands</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="trade_history">Trade history</string>
    <string name="balance">Balance</string>
    <string name="payment_method">Payment method</string>
    <string name="goods_description">goods_description</string>
    <string name="color">Color :</string>
    <string name="quantity">Quantity :</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="amount">Amount</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>