<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/navigation_home"
       />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorites_icon"
        android:title="@string/navigation_favorites"
     />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/basket_icon"
        android:title="@string/navigation_basket"
        />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/messages_icon"
        android:title="@string/navigation_messages"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/navigation_profile"
        />

</menu>