<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.onlineShopApp.ui.home.MainFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_navigation_home_to_goodsDetailsFragment"
            app:destination="@id/goodsDetailsFragment"
            app:enterAnim="@anim/fui_slide_in_right"
            app:exitAnim="@anim/fui_slide_in_right"/>
    </fragment>
    <action
        android:id="@+id/action_global_navigation_home"
        app:destination="@id/navigation_home" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.onlineShopApp.ui.messages.MessagesFragment"
        android:label="@string/navigation_messages"
        tools:layout="@layout/fragment_messages" />

    <action
        android:id="@+id/action_global_navigation_messages"
        app:destination="@id/navigation_messages" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.onlineShopApp.ui.favorites.FavoritesFragment"
        android:label="@string/navigation_favorites"
        tools:layout="@layout/fragment_favorites" />
    <action android:id="@+id/action_global_favoritesFragment"
        app:destination="@id/favoritesFragment" />

    <fragment
        android:id="@+id/basketFragment"
        android:name="com.example.onlineShopApp.ui.basket.BasketFragment"
        android:label="@string/navigation_basket"
        tools:layout="@layout/fragment_basket" />
    <action android:id="@+id/action_global_basketFragment"
        app:destination="@id/basketFragment" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.onlineShopApp.ui.profile.ProfileFragment"
        android:label="@string/navigation_profile"
        tools:layout="@layout/fragment_profile" />
    <action android:id="@+id/action_global_profileFragment"
        app:destination="@id/profileFragment"/>
    <fragment
        android:id="@+id/goodsDetailsFragment"
        android:name="com.example.onlineShopApp.ui.home.GoodsDetailsFragment"
        android:label="fragment_goods_details"
        tools:layout="@layout/fragment_goods_details" />


</navigation>