<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.onlineShopApp.ui.profile.ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/back_arrow_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textAppearance="@style/profile_title_text_style" />
    </FrameLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="19dp"
        android:layout_gravity="center"
        android:padding="1dp"
        app:shapeAppearanceOverlay="@style/circular_image_style"
        app:strokeColor="@color/myBlack"
        app:strokeWidth="1dp"
        tools:src="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_photo"
        android:text="@string/change_photo"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/change_photo_text_style"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:text="User name"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:textAppearance="@style/profile_title_text_style"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/share_icon"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/signin_login_button_background"
        android:text="@string/upload_item"
        android:textAppearance="@style/sign_login_text_style"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/category_picture_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/category_picture_background"
          />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:id="@+id/category_picture"
                android:elevation="10dp"
                android:src="@drawable/credit_card_icon"
               />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/trade_store_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_store"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/input_text_style"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_trade_store"
                android:src="@drawable/arrow_icon"
                android:layout_gravity="end"
                android:layout_marginEnd="42dp"
                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/category_picture_background"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/credit_card_icon"
                />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/payment_method_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/input_text_style"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_payment_method"
                android:src="@drawable/arrow_icon"
                android:layout_gravity="end"
                android:layout_marginEnd="42dp"
                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/category_picture_background"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/credit_card_icon"
                />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/input_text_style"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/balance_value"
                android:textAppearance="@style/input_text_style"
                android:text="$ 1000"
                android:layout_gravity="end"
                android:layout_marginEnd="42dp"
                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/category_picture_background"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/credit_card_icon"
                />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/trade_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_history"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/input_text_style"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_trade_history"
                android:src="@drawable/arrow_icon"
                android:layout_gravity="end"
                android:layout_marginEnd="42dp"
                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/category_picture_background"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:id="@+id/restore_purchase_picture"
                android:src="@drawable/update_icon"
                android:elevation="2dp"
                />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/restore_purchase_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_purchase"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/input_text_style"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_restore_purchase"
                android:src="@drawable/arrow_icon"
                android:layout_gravity="end"
                android:layout_marginEnd="42dp"
                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/category_picture_background"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:id="@+id/help_picture"
                android:src="@drawable/question_icon"
                />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/input_text_style"/>

           </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logout_picture_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/category_picture_background"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:id="@+id/logout_picture"
                android:src="@drawable/log_out_icon"
                />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/input_text_style"/>



    </LinearLayout>



</LinearLayout>